<resources>
    <string name="app_name">Template</string>
    <string name="page_title_dashboard">Dashboard</string>
    <string name="page_title_settings">Settings</string>
    <string name="page_title_stocks">Stocks</string>
    <string name="stocks_empty">No Stocks ticker add yet, click on search button to add your first ticker.</string>
    <string name="stocks_tile_retry">Retry</string>
    <string name="stocks_tile_delete">Delete</string>
    <string name="stocks_tile_deleted">%s was removed</string>
    <string name="stocks_tile_readd">Add again</string>
    <string name="stocks_search">Search</string>
    <string name="stocks_search_clear">Clear</string>
    <string name="stocks_search_voice">Voice search</string>
    <string name="stocks_search_empty">Write your ticker on the field above.</string>
    <string name="stocks_search_not_found">No tickers found.</string>
    <string name="dashboard_error">Failed to load, please try again later.</string>
    <string name="dashboard_reload">Reload</string>
    <string name="dashboard_progress_percent_title">Progress percent:</string>
    <string name="dashboard_difficulty_change_title">Difficulty change:</string>
    <string name="dashboard_estimated_retarget_date_title">Estimated retarget date:</string>
    <string name="dashboard_remaining_blocks_title">Remaining blocks:</string>
    <string name="dashboard_remaining_time_title">Remaining time:</string>
    <string name="dashboard_previous_retarget_title">Previous retarget:</string>
    <string name="settings_option_default_page_title">Initial page:</string>
    <string name="settings_error">Failed to load, please try again later.</string>
</resources>
