<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryVariant"
            android:theme="@style/ToolBarStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/dashboard_menu"
            app:title="@string/page_title_dashboard" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dashboard_progress_percent_title"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="2dp"
                android:gravity="end"
                android:text="@string/dashboard_progress_percent_title"
                app:layout_constraintBottom_toTopOf="@+id/dashboard_difficulty_change_title"
                app:layout_constraintEnd_toStartOf="@+id/horizontal_guide"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dashboard_progress_percent_value"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                app:layout_constraintBottom_toBottomOf="@+id/dashboard_progress_percent_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/horizontal_guide"
                app:layout_constraintTop_toTopOf="@+id/dashboard_progress_percent_title"
                tools:text="@tools:sample/cities" />

            <TextView
                android:id="@+id/dashboard_difficulty_change_title"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="2dp"
                android:gravity="end"
                android:text="@string/dashboard_difficulty_change_title"
                app:layout_constraintBottom_toTopOf="@+id/dashboard_estimated_retarget_date_title"
                app:layout_constraintEnd_toStartOf="@+id/horizontal_guide"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboard_progress_percent_title" />

            <TextView
                android:id="@+id/dashboard_difficulty_change_value"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                app:layout_constraintBottom_toBottomOf="@+id/dashboard_difficulty_change_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/horizontal_guide"
                app:layout_constraintTop_toTopOf="@+id/dashboard_difficulty_change_title"
                tools:text="@tools:sample/cities" />

            <TextView
                android:id="@+id/dashboard_estimated_retarget_date_title"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="2dp"
                android:gravity="end"
                android:text="@string/dashboard_estimated_retarget_date_title"
                app:layout_constraintBottom_toTopOf="@+id/dashboard_remaining_blocks_title"
                app:layout_constraintEnd_toStartOf="@+id/horizontal_guide"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboard_difficulty_change_title" />

            <TextView
                android:id="@+id/dashboard_estimated_retarget_date_value"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                app:layout_constraintBottom_toBottomOf="@+id/dashboard_estimated_retarget_date_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/horizontal_guide"
                app:layout_constraintTop_toTopOf="@+id/dashboard_estimated_retarget_date_title"
                tools:text="@tools:sample/cities" />

            <TextView
                android:id="@+id/dashboard_remaining_blocks_title"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="2dp"
                android:gravity="end"
                android:text="@string/dashboard_remaining_blocks_title"
                app:layout_constraintBottom_toTopOf="@+id/dashboard_remaining_time_title"
                app:layout_constraintEnd_toStartOf="@+id/horizontal_guide"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboard_estimated_retarget_date_title" />

            <TextView
                android:id="@+id/dashboard_remaining_blocks_value"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                app:layout_constraintBottom_toBottomOf="@+id/dashboard_remaining_blocks_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/horizontal_guide"
                app:layout_constraintTop_toTopOf="@+id/dashboard_remaining_blocks_title"
                tools:text="@tools:sample/cities" />

            <TextView
                android:id="@+id/dashboard_remaining_time_title"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="2dp"
                android:gravity="end"
                android:text="@string/dashboard_remaining_time_title"
                app:layout_constraintBottom_toTopOf="@+id/dashboard_previous_retarget_title"
                app:layout_constraintEnd_toStartOf="@+id/horizontal_guide"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboard_remaining_blocks_title" />

            <TextView
                android:id="@+id/dashboard_remaining_time_value"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                app:layout_constraintBottom_toBottomOf="@+id/dashboard_remaining_time_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/horizontal_guide"
                app:layout_constraintTop_toTopOf="@+id/dashboard_remaining_time_title"
                tools:text="@tools:sample/cities" />

            <TextView
                android:id="@+id/dashboard_previous_retarget_title"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="2dp"
                android:gravity="end"
                android:text="@string/dashboard_previous_retarget_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/horizontal_guide"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboard_remaining_time_title" />

            <TextView
                android:id="@+id/dashboard_previous_retarget_value"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                app:layout_constraintBottom_toBottomOf="@+id/dashboard_previous_retarget_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/horizontal_guide"
                app:layout_constraintTop_toTopOf="@+id/dashboard_previous_retarget_title"
                tools:text="@tools:sample/cities" />

            <TextView
                android:id="@+id/dashboard_error"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:text="@string/dashboard_error"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/horizontal_guide"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
